# dropbox

./: .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md
binding-agent/: ServerRegestry.cpp  ServerRegestry.hpp  ServerRegistry.cpp  ServerRegistry.hpp  main.cpp
binding-agent/handlers/: client-handler.cpp  client-handler.hpp  server-handler.cpp  server-handler.hpp
client/: CLI.cpp  CLI.hpp  CLICallback.cpp  CLICallback.hpp  Client.cpp  Client.hpp  ClientConfig.hpp  ClientMonitor.cpp  ClientMonitor.hpp  ClientState.cpp  ClientState.hpp  Command.cpp  Command.hpp  CommandCreator.cpp  CommandCreator.hpp  CommandParser.cpp  CommandParser.hpp  Connection.cpp  Connection.hpp  EventHistory.cpp  EventHistory.hpp  FileMetadata.cpp  FileMetadata.hpp  FileMonitor.cpp  FileOp.hpp  HeartbeatMonitor.cpp  HeartbeatMonitor.hpp  ServerConnection.cpp  ServerMonitor.cpp  ServerMonitor.hpp  ThreadOwner.hpp  main  main.cpp
client/sync_dir/: data-window-bitrate.txt  test_descriptors.py  teste.c
common/: BaseSocket.cpp  BaseSocket.hpp  ClientSocket.cpp  ClientSocket.hpp  Messages.cpp  Messages.h  Messages.hpp  Protocol.h  ServerSocket.cpp  ServerSocket.hpp  utils.cpp  utils.hpp
exemplo_sockets/: server.cpp
exemplos/inotify/: main.cpp
exemplos/sockets/: client.cpp  server.cpp
server/: BinderManager.cpp  BinderManager.hpp  DeviceManager.cpp  DeviceManager.h  DeviceManager.hpp  Election.cpp  ElectionManager.cpp  ElectionManager.hpp  ReplicaConnection.cpp  ReplicaConnection.hpp  ReplicaManager.cpp  ReplicaManager.hpp  ReplicaThread.cpp  ReplicaThread.hpp  Server.cpp  Server.hpp  SyncQueue.cpp  SyncQueue.hpp  main.cpp
server/controllers/: Controller.hpp  DownloadController.cpp  DownloadController.hpp  UploadController.cpp  UploadController.hpp
server/handlers/: BinderHandler.cpp  BinderHandler.hpp  DeleteHandler.cpp  DeleteHandler.hpp  DownloadHandler.cpp  DownloadHandler.hpp  ElectedHandler.cpp  ElectedHandler.hpp  ElectionHandler.cpp  ElectionHandler.hpp  Handler.hpp  HeartBeatHandler.cpp  HeartBeatHandler.hpp  ListServerHandler.cpp  ListServerHandler.hpp  RegisterDeviceHandler.cpp  RegisterDeviceHandler.hpp  ReplicaConnectionHandler.cpp  ReplicaConnectionHandler.hpp  SyncClientToServerHandler.cpp  SyncClientToServerHandler.hpp  SyncServerToClientHandler.cpp  SyncServerToClientHandler.hpp  UploadHandler.cpp  UploadHandler.hpp
test/: hello_test.cpp
